# BLAKE2

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md
b2sum/: CMakeLists.txt  README  b2sum.1  b2sum.c  makefile
bench/: amd64cpuinfo.c  bench.c  do.gplot  makefile  md5.c  x86cpuinfo.c
contrib/: Makefile.am  configure.ac
contrib/autotools/: Makefile.am  configure.ac
csharp/: .gitignore  AssemblyInfo.cs  Blake2.cs.mono.csproj  Blake2.cs.vs.csproj  Blake2B-FullyUnrolled.cs  Blake2B-Inline.cs  Blake2B-Simple.cs  Blake2B.cs  Blake2BTreeConfig.cs  Blake2Sharp.sln  Program.cs  README.md
csharp/Blake2Sharp/: Blake2B.cs  Blake2BConfig.cs  Blake2BCore-FullyUnrolled.cs  Blake2BCore-Inline.cs  Blake2BCore-Simple.cs  Blake2BCore.cs  Blake2BHasher.cs  Blake2BNodeHasher.cs  Blake2BTreeConfig.cs  Blake2IvBuilder.cs  Blake2Sharp.csproj  Blake2Sharp.xproj  Hasher.cs  NodeHasher.cs  TreeHasher.cs  compression.c  project.json
csharp/Blake2Sharp.CompressionCodeGen/: Blake2Sharp.CompressionCodeGen.csproj  Blake2Sharp.CompressionCodeGen.xproj  Program.cs  project.json
csharp/Blake2Sharp.CompressionCodeGen/Properties/: AssemblyInfo.cs
csharp/Blake2Sharp.Tests/: Blake2Sharp.Tests.csproj  Blake2Sharp.Tests.xproj  DebugNodeHasher.cs  SequentialTests.cs  TestVectors.cs  project.json
csharp/Blake2Sharp.Tests/Properties/: AssemblyInfo.cs
csharp/Blake2Sharp/Properties/: AssemblyInfo.cs
neon/: CMakeLists.txt  blake2b-neon.c  blake2b-round.h  blake2b.c  blake2s-neon.c  blake2s-round.h  makefile  makefile-aarch64
power8/: blake2-config.h  blake2-impl.h  blake2.h  blake2b-load-pwr8.h  blake2b-round.h  blake2b.c  makefile
ref/: CMakeLists.txt  blake2-impl.h  blake2-kat.h  blake2-kat.json  blake2.h  blake2b-ref.c  blake2bp-ref.c  blake2s-ref.c  blake2sp-ref.c  blake2xb-ref.c  blake2xs-ref.c  genkat-c.c  genkat-json.c  genkat.c  makefile  sample.json
sse/: CMakeLists.txt  blake2-config.h  blake2-impl.h  blake2-kat.h  blake2.h  blake2b-load-sse2.h  blake2b-load-sse41.h  blake2b-round.h  blake2b.c  blake2bp.c  blake2s-load-sse2.h  blake2s-load-sse41.h  blake2s-load-xop.h  blake2s-round.h  blake2s.c  blake2sp.c  blake2xb.c  blake2xs.c  genkat-c.c  genkat-json.c  makefile
testvectors/: blake2-kat.h  blake2-kat.json  blake2b-test.txt  blake2bp-kat.txt  blake2bp-test.txt  blake2s-test.txt  blake2sp-kat.txt  blake2sp-test.txt
